[gd_scene load_steps=5 format=3 uid="uid://djsnn6ira6jxd"]

[ext_resource type="Texture2D" uid="uid://cms1nvkyr43o" path="res://assets/small_rocks.png" id="1_ha7f2"]
[ext_resource type="Script" path="res://scripts/inventory/CraftInfo.gd" id="1_tajps"]

[sub_resource type="LabelSettings" id="LabelSettings_opxun"]
font_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_mguv2"]
font_size = 12

[node name="CraftInfo" type="PanelContainer"]
offset_right = 184.0
offset_bottom = 60.0
script = ExtResource("1_tajps")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_constants/separation = -1

[node name="Ingredients" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ItemDescription" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "A bunch of rocks"
label_settings = SubResource("LabelSettings_opxun")
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -9

[node name="ItemTexture" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_ha7f2")
expand_mode = 2
stretch_mode = 5

[node name="ItemName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Rocks"
label_settings = SubResource("LabelSettings_mguv2")
horizontal_alignment = 1

[node name="CraftButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "CRAFT"
